# otsubset

./: AUTHORS  CMakeLists.txt  VERSION
cmake/: OTSubsetConfig.cmake.in  UseOTSubset.cmake
distro/debian/: changelog  control  rules
distro/rpm/: otsubset.spec
distro/windows/: README.txt  installer.nsi
doc/: CMakeLists.txt  GenericInformation.tex.in  OTSubset_ArchitectureGuide.tex  OTSubset_Documentation.sty  OTSubset_Documentation.tex  OTSubset_ReferenceGuide.tex  OTSubset_UseCasesGuide.tex  OTSubset_UserManual.tex  OTSubset_Validation.tex  OTSubset_summary.tex  OTSubset_title.tex  architecture.xmi
lib/: CMakeLists.txt
lib/include/: CMakeLists.txt  OTSubsetprivate.hxx
lib/src/: CMakeLists.txt  SubsetSampling.cxx  SubsetSampling.hxx  SubsetSamplingResult.cxx  SubsetSamplingResult.hxx
lib/src/otsubset/: SubsetSampling.hxx  SubsetSamplingResult.hxx
lib/test/: CMakeLists.txt  t_SubsetSampling_std.cxx
python/src/: CMakeLists.txt  SubsetSampling.i  SubsetSamplingResult.i  __init__.py  otsubset_module.i
python/test/: CMakeLists.txt  t_SubsetSampling_R-S.py  t_SubsetSampling_Waarts_system_series.py
